# Projects

./: package-lock.json  ticket.css  ticket.html
Custom Memory Allocation and Tracking with openvc for dynamic object detection in C++/: CMakeLists.txt  test.cpp
Ed_Tech_project/: package-lock.json  package.json
O-X_game/: css.css  html.html  initial_detail.txt  js.js  result.txt  temp.cpp  tempCodeRunnerFile.cpp  vikas.c++
React(projects)/: 02_03_Todo_App - Shortcut.lnk
Shopping_Cart_Project/src/components/: CartItem.jsx
Study_Notion_Project/src/: App.js
Testimonial_Slider_Project/: package-lock.json  package.json
Testimonial_Slider_Project/src/: App.js
Top_Courses_Project/: package-lock.json
expressnode.js(projects)/: 01_Intro - Shortcut.lnk
expressnode.js(projects)/Auth_App/: .env
expressnode.js(projects)/Routers and countrollers/: index.js
frame differencing for dynamic objects/: CMakeLists.txt  main.cpp
javascript(projects)/O-X_game/: css.css  html.html
javascript(projects)/e-commerce-token/: ticket.css
javascript(projects)/password-generator/: java.js  main.html
javascript(projects)/portfolio/: portfolio.css
me-profile/: javasc.js  profiel.html
object detection using yolo embedded/: CMakeLists.txt  test.cpp  yolov4-tiny.cfg
password-generator/: java.js  main.html  makeup.css
portfolio/: portfolio.html
profile/: profiel.html  profile.css
stegonography(project)/: incrypt.py  info stagno.txt  package-lock.json
tailwind/: index.html  package-lock.json  package.json
whether-reports/: css.css  js.js  main.html
(+5 files in other folders)
